--- a/css/todolist.css
+++ b/css/todolist.css
@@ -92,11 +92,12 @@ input[type="submit"]:hover {
 }
 
 .todo-item {
-    display:grid;
-    grid-template-columns: 1fr minmax(20rem,auto) 1fr 1fr;
+    display:flex;
+    gap: 16px;
+    /* grid-template-columns: 1fr minmax(20rem,auto) 1fr 1fr;
     grid-template-rows: auto;
     column-gap: .8rem;
-    
+     */
     margin:0 0 2rem;
     padding:.8rem 2rem;
     border-radius:3px;
@@ -135,16 +136,16 @@ input[type="submit"]:hover {
 }
 
 .task-name{
-    grid-column: 2/3;
-
+    /* grid-column: 2/3; */
+    flex: 1;
     background-color:#f2f2f2;
     padding:1rem;
     font-size:1.1rem;
 }
 
-.fa-edit{
-    grid-column: 3/4;   
-}
+/* .fa-edit{
+    margin-right: 16px;
+} */
 
 /*Container que abre ao clicar no icon do lapis para editar tarefa*/
 
